----------------------------------------------------------------------------------------------------------------------
Version x.y.z
Date: 
    Features:
        - Autofocus the project name field when you create a new project
        - When opening the main window, use the same column widths as when it was last closed.
    Bugfixes:
        - Sometimes, deleting and/or right-click resetting modules would not work.
----------------------------------------------------------------------------------------------------------------------
Version 0.7.4
Date: July 24th 2024
    Features:
        - Add the ability to switch through project pages with control-tab and control-shift-tab
    Bugfixes:
        - Fix a possible threading race while destroying textures, which could cause an illegal access crash.
        - Fix a loading error when mods use non-ASCII characters in their settings.
        - Fix errors when loading KuxOrbitalCannon and Deadlock SE bridge
----------------------------------------------------------------------------------------------------------------------
Version 0.7.3
Date: July 21st 2024
    Features:
        - Use modern Direct3D on Windows.
        - Add the option to specify how many beacons, with what modules, should be applied on a per-building-type
          basis, in addition to the global and per-recipe-row settings.
        - Allow adding technologies to the tables to produce research units.
        - Add settings for research speed and productivity bonuses, to correctly calculate lab speed and counts.
    Bugfixes:
        - Fix PageSearch scrollbar not working.
        - Refresh the milestones display after adding or removing milestones.
    Internal changes:
        - Finish the namespace rename from YAFC to Yafc.
----------------------------------------------------------------------------------------------------------------------
Version 0.7.2
Date: June 23rd 2024
    Features: